[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Dan Schreiber <dmschreiber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
rayon = "1"
itertools = "0.7.8"
backtrace = "0.3.55"
sha1 = "0.6.0"